Actualización de la página de inicio

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@ if (empty($_SESSION["nombre"])) {
     </div>
     <div class="menu">
     <ul>
-        <li><a href="inicio.php"><i class="fas fa-house"></i>Inicio</a></li>
+        <li><a href="index.html"><i class="fas fa-house"></i>Inicio</a></li>
         <li><a href="perfil.html"><i class="fas fa-user"></i>Perfil</a></li>
         <li><a href="home.html"><i class="fas fa-address-book"></i>Lecciones</a></li>
         <li><a href="avance.html"><i class="fas fa-address-book"></i>avances</a></li>
