--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ if (empty($_SESSION["nombre"])) {
         </div>
         <div class="menu">
         <ul>
-            <li><a href="inicio.php"><i class="fas fa-house"></i>Inicio</a></li>
+            <li><a href="index.html"><i class="fas fa-house"></i>Inicio</a></li>
             <li><a href="perfil.html"><i class="fas fa-user"></i>Perfil</a></li>
-            <li><a href="home.php"><i class="fas fa-cogs"></i>Lecciones</a></li>
+            <li><a href="home.html"><i class="fas fa-cogs"></i>Lecciones</a></li>
             <li><a href="avance.html"><i class="fas fa-address-book"></i>avances</a></li>
             <li><a href="configuracion.html"><i class="fas fa-bell"></i>configuración</a></li>
             <li><a href="controlador_cerrar_sesion.php"><i class="fas fa-cancel"></i>Cerrar Sesion</a></li>
