--- a/lecciones/leccion 1/vocales.html
+++ b/lecciones/leccion 1/vocales.html
@@ -136,7 +136,7 @@
         </audio>
 
     </section>
-    <a href="/login/lecciones/leccion 1/Leccion1 letras.html" class="pasar">
+    <a href="Leccion1 letras.html" class="pasar">
         <i class="fas fa-forward-step"></i>
     </a>
 </body>
