--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@ if (empty($_SESSION["nombre"])) {
     <span>A</span>
     </div>
 <div class="Less1">
-    <span>Lección:01<br> Las Letras<br><a href="lecciones/leccion 1/vocales.html">INCIAR&nbsp<i class="fas fa-forward-step"></i></a></span>
+    <span>Leccion:01<br> Las Letras<br><a href="lecciones/leccion 1/vocales.html">INCIAR&nbsp<i class="fas fa-forward-step"></i></a></span>
 </div>
 </label>
 <label>
